# fel4

./: .gitignore  .gitmodules  Cargo.toml  Jamfile  Jamrules  Makefile  Tools.mk  Vagrantfile  Xargo.toml  x86_64-fel4-kernel-elf.json
Jam/: binutils.jam  fel4.jam  nasm.jam  rust.jam
crates/disc_image/: Cargo.toml
doc/: Makefile  README  TODO  menu.lst  shard_ring_utilization  writingkernels.txt
kernel/: Cargo.toml  Makefile  x86_64-fel4.json
kernel/arch/x86_64/: cpuid.asm  gdt.asm  link.ld  long_start.asm  paging.asm  sse.asm  start.asm
kernel/src/: debug.rs  lib.rs
kernel/src/interrupts/: apic.rs  idt.rs  mod.rs
kernel/src/memory/: mod.rs
kernel/src/memory/paging/: mapper.rs  mod.rs  table.rs
kernel/src/sel4/: mod.rs
kernel/src/sync/: mod.rs
libs/bump_allocator/: Cargo.toml
libs/disc_image/: Cargo.toml
libs/disc_image/src/: lib.rs
libs/elf-rs/: Cargo.toml
loader/multiboot/: Cargo.toml
src/: Makefile  arch_init.c  caps.rs  gdt.c  gdt.h  gdt.rs  idt.c  idt.h  interrupt.c  interrupts.rs  isr_stubs.asm  kbd_driver.c  klib.asm  lib.rs  link.ld  macros.h  main.c  main.rs  memory.c  multiboot.h  pic.c  scrn.c  serial.rs  start.asm  string.c  system.h  tss.c  vga_driver.c
src/kernel/: Cargo.toml  Makefile  ata_driver.c  fat_driver.c  gdt.c  idt.c  interrupt.c  isr_stubs.asm  klib.asm  link.ld  macros.h  memory.c  raw_io.c  start.asm  string.c  system.h
src/kernel/arch/x86_64/: isr_stubs.asm  link.ld  long_start.asm  multiboot.asm  paging.asm  shard.mk  start.asm
src/kernel/libs/bump_allocator/src/: lib.rs
src/kernel/src/: debug.rs  lib.rs
src/kernel/src/memory/: area_frame_allocator.rs  mod.rs
src/kernel/src/memory/paging/: entry.rs  mod.rs  temporary_page.rs
src/l4/: caps.rs  ipc.rs  mod.rs  thread.rs
src/vga_buffer/: mod.rs
