[package]
name = "fel4"
version = "0.1.0"
authors = ["Cary Haynie <cary.haynie@gmail.com>"]

[dev-dependencies]
array-init = "0.0.3"

[dependencies]
bootloader_precompiled = "0.2.0"
spin = "0.4.6"
uart_16550 = "0.1.0"
volatile = "0.2.3"
x86_64 = "0.2.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-fel4.json"