[package]
name = "shard_kernel"
version = "0.0.1"
authors = ["Cary Haynie <cary.haynie@gmail.com"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.6.0"
bitflags = "0.7.0"
rlibc = "1.0.0"
spin = "0.4.3"

[dependencies.bump_allocator]
path = "../libs/bump_allocator"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[dependencies.multiboot2]
git = "https://github.com/caryhaynie/multiboot2-elf64"

[dependencies.x86]
version = "0.7.1"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
