[package]
name = "shard_kernel"
version = "0.0.1"
authors = ["Cary Haynie <cary.haynie@gmail.com"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "0.7.0"
rlibc = "1.0.0"
spin = "0.4.3"

[dependencies.multiboot2]
git = "https://github.com/caryhaynie/multiboot2-elf64"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
